Changed from Azure to branch

--- a/docs/reference/dep-006.md
+++ b/docs/reference/dep-006.md
@@ -166,7 +166,7 @@ There is an [excellent blog post](https://arp242.net/weblog/yaml_probably_not_so
 
 ### JSON
 
-JSON certainly has its place and is stricter than YAML on field types, but it is not a human-readable markup language. You can't write comments in JSON. That's a non-starter for a file that's meant to be used by developers to express how their application is deployed to production. At the end of the day, we're writing a tool for developers, not machines. For projects that stand up infrastructure like [acs-engine](https://github.com/Azure/acs-engine) or [kops](https://github.com/kubernetes/kops), JSON is an excellent fit.
+JSON certainly has its place and is stricter than YAML on field types, but it is not a human-readable markup language. You can't write comments in JSON. That's a non-starter for a file that's meant to be used by developers to express how their application is deployed to production. At the end of the day, we're writing a tool for developers, not machines. For projects that stand up infrastructure like [acs-engine](https://github.com/BeardyC/acs-engine) or [kops](https://github.com/kubernetes/kops), JSON is an excellent fit.
 
 
 
